--- a/canvas.html
+++ b/canvas.html
@@ -1,28 +1,14 @@
-<canvas id='myCanvas' width='400' height="400"></canvas>
-<script>
-    const canvas = document.getElementById('myCanvas')
-    const ctx = canvas.getContext('2d')
- 
-    // draw a rectangle
-    ctx.beginPath()    //begins a new path
-    // ctx.rect(x,y,width,height)
-    ctx.rect(100,50,120,56)         //draws a rectangular path
-    ctx.fillStyle='#0095DD'         //sets the fill color
-    ctx.closePath()                 //close the path
-    ctx.fill()                      //fills the current path
- 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>Gamedev Canvas Workshop</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <canvas id='myCanvas' width='400' height="400"></canvas>
+    <script src="script.js"></script>
+    
+</body>
+</html>
 
-    ctx.beginPath()    //begins a new path
-    // ctx.rect(x,y,width,height)
-    ctx.rect(300,300,120,56)         //draws a rectangular path
-    ctx.fillStyle='#0095DD'         //sets the fill color
-    ctx.closePath()                 //close the path
-    ctx.fill()                      //fills the current path
-
-
-//     Responsive canvase formula
-// 1, listen for changes in window size
-// 2, update size of canvas
-// 3, notify program about new canvas size
-
-</script>
