--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <canvas id='myCanvas' width='700' height="700"></canvas>
-    <script src="bundle.js"></script>
+    <script src="dist/bundle.js"></script>
     
 </body>
 </html>
